<resources>
    <string name="app_name">TymeMA_V</string>
    <string name="title_activity_act_login">act_login</string>
    <string name="start_time_hh_mm">Start Time (HH:MM)</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="end_time_hh_mm">End Time (HH:MM)</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="category_name">Category Name</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="create_category">Create Category</string>
    <string name="create_timesheet_entry">Create Timesheet Entry</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="save1">Save</string>
    <string name="todo7">TODO</string>
    <string name="title_activity_display_timesheet">DisplayTimesheet</string>
    <string name="description_">Description:</string>
    <string name="date_text">Date: %s</string>
    <string name="start_time_text">Start Time: %s</string>
    <string name="end_time_text">End Time: %s</string>
    <string name="category_text">Category: %s</string>
    <string name="description_text">Description: %s</string>
    <string name="date_label">Date: </string>
    <string name="start_time_label">Start Time: </string>
    <string name="end_time_label">End Time: </string>
    <string name="category_label">Category: </string>
    <string name="description_label">Description: </string>
    <string name="open_display_timesheet_button_text">Display Timesheet</string>
</resources>