<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timesheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="393dp"
        android:layout_height="30dp"
        android:background="#070945"
        app:srcCompat="@drawable/tymema"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/general_back_icon"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:contentDescription="@string/todo5" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/date_yyyy_mm_dd"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/editTextStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextDate"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/start_time_hh_mm"
                android:inputType="time"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/editTextEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextStartTime"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/end_time_hh_mm"
                android:inputType="time"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEndTime"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextDescription"
                android:layout_marginTop="16dp"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonSaveEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinnerCategory"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:text="@string/save" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>