<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="393dp"
        android:layout_height="30dp"
        android:background="#070945"
        app:srcCompat="@drawable/tymema"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/todo7" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/general_back_icon"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:contentDescription="@string/todo6" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/category_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/buttonSaveCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextCategoryName"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:text="@string/save1" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>