<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="393dp"
            android:layout_height="30dp"
            android:background="#070945"
            app:srcCompat="@drawable/tymema"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/todo4" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                app:srcCompat="@drawable/general_search_icon"
                android:contentDescription="@string/todo2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/general_back_icon"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:contentDescription="@string/todo3" />

        </RelativeLayout>

        <Button
            android:id="@+id/buttonCreateCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_category"
            android:onClick="openCreateCategoryActivity"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonCreateTimesheetEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="openCreateTimesheetEntryActivity"
            android:text="@string/create_timesheet_entry" />

        <Button
            android:id="@+id/buttonOpenDisplayTimesheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_display_timesheet_button_text"
            android:onClick="openDisplayTimesheet" />

<<<<<<< Updated upstream
    </LinearLayout>
</ScrollView>
=======
        <!-- RecyclerView -->


        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Main Menu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.373"
            app:layout_constraintStart_toEndOf="@+id/btnOpenDrawer"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textSubButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="102dp"
            android:text="Create Categories"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/subButton1" />

        <ImageButton
            android:id="@+id/subButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="88dp"
            android:src="@drawable/ic_category"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textSubButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="155dp"
            android:text="Create Time Sheet"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/subButton2" />

        <ImageButton
            android:id="@+id/subButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="147dp"
            android:src="@drawable/ic_time"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
>>>>>>> Stashed changes
